<package>
  <name>hrp2jsknt_moveit_plugins</name>
  <version>0.5.3</version>
  <description>HRP2JSKNT specific plugins for MoveIt</description>
  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_ros/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_ros</url>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>hrp2_moveit_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>hrp2_moveit_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <moveit_core plugin="${prefix}/hrp2jsknt_moveit_constraint_sampler_plugin_description.xml"/>
    <moveit_core plugin="${prefix}/hrp2jsknt_planning_request_adapters_plugin_description.xml"/>
  </export>

</package>
